--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -1,3 +1,2 @@
-$link-color: $blue-000;
-$btn-primary-color: $blue-200;
-$base-button-color: $grey-dk-250;
+$link-color: $purple-000;
+$btn-primary-color: $purple-200;
